data base setup

--- a/Rent_A_Car_Web/appsettings.json
+++ b/Rent_A_Car_Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Rent_A_Car_Web-A1880924-4A72-46D9-9D8D-7A7C146C0DFD;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=aspnet-Rent_A_Car_Web-A1880924-4A72-46D9-9D8D-7A7C146C0DFD;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
