--- a/Rent_A_Car_Web/Rent_A_Car_Web.csproj
+++ b/Rent_A_Car_Web/Rent_A_Car_Web.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Cars\" />
+  </ItemGroup>
+
 </Project>
